# simple_rest

./: .gitignore  CMakeLists.txt  README.md
include/civetweb_1.16/include/: civetweb.h
src/: main.cpp
src/components/: base64.cpp  log.cpp  log.hpp  tdb.cpp  tdb.hpp
src/handlers/: authHandler.cpp  authHandler.hpp  globalsForHandlers.cpp  globalsForHandlers.hpp  htmlHandler.cpp  htmlHandler.hpp  userHandler.cpp  userHandler.hpp
src/repository/: tdb.cpp  tdb.hpp
src/services/: sessionService.cpp  sessionService.hpp  userService.cpp  userService.hpp
